compiler/testData/diagnostics/tests/j+k/accessClassObjectFromJava.fir.kt
class Foo {
  companion object {
    val bar = 1

    fun test(a: <!OTHER_ERROR!>Foo.`object`<!>) {

    }

  }
}